Fixed height of the container and center aligned the content

--- a/mobile.css
+++ b/mobile.css
@@ -2,6 +2,7 @@
   flex: none;
   flex-direction: column;
   width: 350px;
+  max-height: initial;
 }
 
 img {
