--- a/style.css
+++ b/style.css
@@ -11,18 +11,27 @@ body {
   letter-spacing: 7px;
   text-transform: uppercase;
 }
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
 .main .container {
   max-width: 700px;
-  /* margin: auto; */
+  margin: auto;
   overflow: hidden;
   background: #fff;
-  margin: auto;
-  margin: 70px auto;
+  justify-content: center;
   border-radius: 15px;
   display: flex;
   align-items: center;
+  max-height: 480px;
 }
-
+.btn img {
+  height: 20px !important;
+  width: 20px !important;
+}
 img {
   min-height: 100%;
   max-width: 350px;
